<resources>
    <string name="app_name">EEMJOY</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Bienvenido!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="contador">Contador:</string>
    <string name="name">Nombre:</string>
    <string name="name_or_counter">Nombre o Contador</string>
    <string name="ir">IR</string>
    <string name="email_or_user">Correo</string>
    <string name="password">Contraseña</string>
    <string name="mensaje_crear_cuenta">No tiene creada una cuenta?</string>
    <string name="registrate">Registrarse</string>
    <string name="perfil">Perfil</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="email">Correo Electrónico</string>
    <string name="requerido">requerido*</string>
    <string name="lastname">Apellido</string>
    <string name="phone">Teléfono</string>
    <string name="password_repeat">Repetir Contraseña</string>
    <string name="province">Provincia</string>
    <string name="municipio">Municipio</string>
    <string name="exit">Salir</string>
    <string name="settings">Ajustes</string>
    <string name="user">Usuario</string>
    <string name="adress">Dirección</string>
    <string name="femenino">Femenino</string>
    <string name="masculino">Masculino</string>
    <string name="exacto">Búsqueda exacta</string>
    <string name="born_date">Fecha de Nacimiento</string>
    <string name="hola">Hola,</string>
    <string name="select_client">Selecciona la localidad</string>
    <string name="agregar_lectura">Agregar Lectura</string>
    <string name="lecturas">Lecturas</string>
    <string name="pendiente">pendiente</string>
    <string name="factura">Imprimir Factura</string>
    <string name="lectura">Lectura</string>
    <string name="kwh">kWh</string>
    <string name="incorrect_password">Las credenciales son incorrectas</string>
    <string name="copyright">Copyright © 2022 All rights reserved</string>
    <string name="no_connection">Por favor conecte el dispositivo</string>
    <string name="about">Acerca de</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="close">Salir</string>
    <string name="log_out_application">Está seguro que desea cerrar sesión?</string>
    <string name="lectura_guardada">Lectura Guardada</string>
    <string name="otorga_permisos">Otorga los permisos</string>
    <string name="nombre_empresa">EMPRESA ELÉCTRICA MUNICIPAL DE JOYABAJ</string>
    <string name="dots_divider">..................................</string>
    <string name="mult_divider">**********************************</string>
    <string name="lector">LECTOR</string>
    <string name="client">CLIENTE</string>
    <string name="nit">NIT: C.F.</string>
    <string name="no_contador">No. CONTADOR</string>
    <string name="address">DIRECCIÓN</string>
    <string name="periodo_facturacion">PERIODO DE FACTURACIÓN</string>
    <string name="suggest_date">FECHA SUGERIDA DE PAGO</string>
    <string name="por_pagar">LECTURAS POR PAGAR</string>
    <string name="concept">Concepto</string>
    <string name="importe">Importe</string>
    <string name="alumbrado">Alumbrado público</string>
    <string name="consumo_iva">Consumo + IVA</string>
    <string name="cargo_fijo_iva">Cargo fijo + IVA</string>
    <string name="inde_iva">Aporte Inde + IVA</string>
    <string name="mora">Mora</string>
    <string name="total">Total a pagar</string>
    <string name="open_pdf">Abrir Pdf</string>
    <string name="error_guardando_el_pdf">Error guardando el Pdf</string>
    <string name="introduce_some_value">Introduzca algun valor</string>
    <string name="outside">Se encuentra fuera de periodo</string>
    <string name="instale_una_app">Instale un lector de pdf</string>
    <string name="instala">Instale una app para esta operación</string>
    <string name="lectura_menor_q_anterior">La lectura actual no puede ser menor que la lectura anterior</string>

</resources>