<?xml version="1.0" encoding="utf-8"?>

<!--first of all you have to change
    the layout as CoordinatorLayout.
    This is the first thing we need to do.-->
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id = "@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--AppBarLayout helps the toolbar and other components to react on
        scroll changes. I am using Dark theme for AppBarLayout.
        Inside this AppBarLayout i
        have used CollapsingToolbarLayout. -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background = "@drawable/back_collapsing">

        <!-- In CollapsingToolbarLayout sompe important attributes are:
         i)  app:layout_scrollFlags which is used to specify how collapsing
             layout behaves when content is scrolled.I have used
             app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
             so it will scroll until it's is completely collapsed.
         ii) app:contentScrim="@color/green" that specifies the color
              of the collapsed toolbar -->
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            >
            <!--We are adding the image that we have added earlier
                  in the drawable folder.The attribute app:layout_collapseMode="parallax"
                  causes the image to move when user scrolls at a specific ratio. -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/appCompatTextView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="12sp"
                    android:textColor = "@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/appCompatTextView4"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/appCompatTextView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_marginTop="30dp"
                    android:gravity = "center"
                    android:alpha = "0.7"
                    tools:text = "gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg"
                    android:paddingRight="20dp"
                    android:paddingLeft="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvUser" />

                <androidx.cardview.widget.CardView
                    android:id = "@+id/cvSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/select_client"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginHorizontal="20dp"
                    app:cardCornerRadius="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/appCompatTextView6">
                    <androidx.appcompat.widget.SearchView
                        android:id="@+id/svClient"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:searchIcon="@drawable/ic_baseline_search_24"
                        app:queryHint="@string/name_or_counter"
                        android:showAsAction="always"
                        app:closeIcon="@drawable/ic_baseline_cancel_24"
                        android:iconifiedByDefault = "true"
                        android:theme="@style/Client.SearchView"
                        />
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>



            <!-- The attribute app:layout_collapseMode="pin" is set so that
                 sticks to the top when the user scrolls the view up-->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                >
                <androidx.appcompat.widget.SwitchCompat
                    android:id = "@+id/scExact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exacto"
                    android:layout_gravity="end"
                    android:textColor = "@color/white"
                    android:layout_marginHorizontal="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvClients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id = "@+id/shimmer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:shimmer_auto_start="true"
        android:visibility = "gone"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
            <include layout="@layout/cv_cliente_loading"/>
            <include layout="@layout/cv_cliente_loading"/>
            <include layout="@layout/cv_cliente_loading"/>
            <include layout="@layout/cv_cliente_loading"/>
            <include layout="@layout/cv_cliente_loading"/>
            <include layout="@layout/cv_cliente_loading"/>
            <include layout="@layout/cv_cliente_loading"/>
            <include layout="@layout/cv_cliente_loading"/>
            <include layout="@layout/cv_cliente_loading"/>
            <include layout="@layout/cv_cliente_loading"/>
            <include layout="@layout/cv_cliente_loading"/>
            <include layout="@layout/cv_cliente_loading"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.facebook.shimmer.ShimmerFrameLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>